--- a/css/style.css
+++ b/css/style.css
@@ -68,17 +68,15 @@ body{
     margin-top: 10px;
     width: 450px;
     height: 400px;
-    border: 1px solid black;
+
 }
 
 #img1 {
-    background-image: url("/img/monitor.jpg");
-    height: 400px;
-    width: 450px;
+    background-image: url('/Users/fabiolaforesta/Desktop/Boolean/Classe60/html-css-booleaner/img/monitor.jpg');
+    height: 100%;
   }
 
-#img1 {
-    background-image: url("/img/graph.jpg");
-    height: 400px;
-    width: 450px;
+#img2 {
+    background-image: url("/Users/fabiolaforesta/Desktop/Boolean/Classe60/html-css-booleaner/img/graph.jpg");
+    height: 100%;
   }
